--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,9 @@ Changelog
 
 0.4-dev - (unreleased)
 ----------------------
+* Bug fix: Avoid Globals.ZOPE_HOME and retrieve ZOPEHOME from App.configuration
+  directly
+  [olimpiurob]
 
 0.3 - (2015-01-13)
 ------------------
