--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 0.6-dev - (unreleased)
 ----------------------
+* Changes: updated layout of "Today login status" panel
+  [szabozo0 refs #22687]
 * Bug fix: quick fix for concurrent writings in Python logs
   [ghicaale refs #22658]
 
