--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+0.7.dev0 - (unreleased)
+-----------------------
+
 0.6 - (2015-02-03)
 ------------------
 * Changes: updated layout of "Today login status" panel
