* Bug fix: prefixed container classes in order to avoid styling issues when website loads Twitter Bootstrap [ichimdav refs #26197]

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,9 @@ Changelog
 
 1.0.dev0 - (unreleased)
 -----------------------
+* Bug fix: prefixed container classes in order to avoid styling issues when
+  website loads Twitter Bootstrap
+  [ichimdav refs #26197]
 
 0.9 - (2015-03-17)
 ------------------
