--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+1.1.dev0 - (unreleased)
+-----------------------
+* Change: new egg release
+  [ghicaale]
+
 1.0 - (2015-07-28)
 ------------------
 * Bug fix: prefixed container classes in order to avoid styling issues when
