Updated version for eea.controlpanel to 1.3.dev0

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+1.3.dev0 - (unreleased)
+-----------------------
+
 1.2 - (2015-08-18)
 ------------------
 * Change: Prefixed container classes with panel prefix since container is a
