--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 1.3.dev0 - (unreleased)
 -----------------------
+* Change: fixed container content overflow
+  [ichim-david]
 
 1.2 - (2015-08-18)
 ------------------
