--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+1.4.dev0 - (unreleased)
+-----------------------
+
 1.3 - (2016-04-18)
 ------------------
 * Change: fixed container content overflow
