--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+1.5.dev0 - (unreleased)
+-----------------------
+
 1.4 - (2016-05-04)
 ------------------
 * Bug fix: Fix REMOTE_ADDR getter from request.environment
