--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+1.6.dev0 - (unreleased)
+-----------------------
+
 1.5 - (2016-05-19)
 ------------------
 * Bug fix: Fix pylint warnings
