--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 1.6.dev0 - (unreleased)
 -----------------------
+* Change: updated package information
+  [eduard-fironda]
 
 1.5 - (2016-05-19)
 ------------------
